--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 article {
   display: flex;
   flex-wrap: wrap;
@@ -5,7 +12,7 @@ article {
 
 article > * {
   width: 100%;
-  height: 300px;
+  min-height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,6 +24,7 @@ article > * {
 nav {
   background-color: #5995DA;
   height: 80px;
+  min-height: auto;
 }
 
 header {
@@ -25,7 +33,7 @@ header {
 
 main {
   background-color: #EAEDF0;
-  height: 600px;
+  min-height: 600px;
 }
 
 #sign-up {
@@ -42,4 +50,36 @@ main {
 
 #feature-3 {
   background-color: #C8C6FA;
+}
+
+/* Tablet */
+@media screen and (min-width: 640px) and (max-width: 999px) {
+  #sign-up, #feature-1, #feature-2, #feature-3 {
+    width: 50%;
+    height: 50vw;
+  }
+}
+
+/* Desktop */
+@media screen and (min-width: 1024px) {
+  #feature-2 {
+    order: 1;
+  }
+  #sign-up {
+    order: 2;
+  }
+  main {
+    order: 3;
+  }
+  #feature-1, #feature-2, #feature-3 {
+    width: calc(100% / 3);
+    height: 40vw;
+  }
+  header {
+    min-height: 33vw;
+  }
+  #sign-up {
+    min-height: auto;
+    padding: 2rem;
+  }
 }
